[gd_scene load_steps=15 format=2]

[ext_resource path="res://Overworld/Sets/Maps/School/104.png" type="Texture" id=1]
[ext_resource path="res://Overworld/Sets/Maps/School/101.png" type="Texture" id=2]
[ext_resource path="res://Overworld/Sets/Maps/School/102.png" type="Texture" id=3]
[ext_resource path="res://Overworld/Sets/Maps/School/SchoolFurniture.tres" type="TileSet" id=4]
[ext_resource path="res://Overworld/Sets/Maps/Set1/SchoolBackdrop.tres" type="TileSet" id=5]
[ext_resource path="res://Overworld/Sets/Maps/Set1/S1School.gd" type="Script" id=6]
[ext_resource path="res://Overworld/Sets/Maps/School/103.png" type="Texture" id=7]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Overworld/Sets/Maps/School/SchoolOOBR.tscn" type="PackedScene" id=10]
[ext_resource path="res://Dialogue/DialogueHUD/DialogueHUD.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 128 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="School" type="Node" groups=[
"Location",
]]
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -64, 0 )
tile_set = ExtResource( 5 )
collision_mask = 16
format = 1
tile_data = PoolIntArray( -1310721, 3, 0, -1376256, 3, 1, -1376255, 3, 1, -1376254, 3, 1, -1376253, 3, 1, -1376252, 3, 1, -1376251, 3, 1, -1376250, 3, 2, -1376245, 3, 0, -1376244, 3, 1, -1376243, 3, 1, -1376242, 3, 1, -1376241, 3, 1, -1376240, 3, 1, -1376239, 3, 2, -1376238, 1, 0, -1245185, 3, 131072, -1310720, 3, 131073, -1310719, 3, 131073, -1310718, 3, 131073, -1310717, 3, 131073, -1310716, 3, 131073, -1310715, 3, 4, -1310714, 3, 65538, -1310713, 2, 0, -1310712, 2, 0, -1310711, 2, 0, -1310710, 2, 0, -1310709, 3, 65536, -1310708, 3, 3, -1310707, 3, 131073, -1310706, 3, 131073, -1310705, 3, 131073, -1310704, 3, 131073, -1310703, 3, 131074, -1310702, 1, 0, -1179649, 0, 0, -1245184, 0, 0, -1245183, 0, 0, -1245182, 0, 0, -1245181, 0, 0, -1245180, 0, 0, -1245179, 3, 65536, -1245178, 3, 65538, -1245177, 2, 0, -1245176, 2, 0, -1245175, 2, 0, -1245174, 2, 0, -1245173, 3, 65536, -1245172, 3, 65538, -1245171, 0, 0, -1245170, 0, 0, -1245169, 0, 0, -1245168, 0, 0, -1245167, 0, 0, -1179643, 3, 131072, -1179642, 3, 131074, -1179641, 2, 0, -1179640, 2, 0, -1179639, 2, 0, -1179638, 2, 0, -1179637, 3, 131072, -1179636, 3, 131074, -1114112, 2, 0, -1114111, 2, 0, -1114110, 2, 0, -1114109, 2, 0, -1114108, 2, 0, -1114107, 0, 0, -1114106, 0, 0, -1114105, 2, 0, -1114104, 2, 0, -1114103, 2, 0, -1114102, 2, 0, -1114101, 0, 0, -1114100, 0, 0, -1114099, 2, 0, -1114098, 2, 0, -1114097, 2, 0, -1114096, 2, 0, -1114095, 2, 0, -1048576, 2, 0, -1048575, 2, 0, -1048574, 2, 0, -1048573, 2, 0, -1048572, 2, 0, -1048569, 2, 0, -1048568, 2, 0, -1048567, 2, 0, -1048566, 2, 0, -1048563, 2, 0, -1048562, 2, 0, -1048561, 2, 0, -1048560, 2, 0, -1048559, 2, 0, -983040, 2, 0, -983039, 2, 0, -983038, 2, 0, -983037, 2, 0, -983036, 2, 0, -983035, 2, 0, -983034, 2, 0, -983033, 2, 0, -983032, 2, 0, -983031, 2, 0, -983030, 2, 0, -983029, 2, 0, -983028, 2, 0, -983027, 2, 0, -983026, 2, 0, -983025, 2, 0, -983024, 2, 0, -983023, 2, 0, -917504, 2, 0, -917503, 2, 0, -917502, 2, 0, -917501, 2, 0, -917500, 2, 0, -917499, 3, 0, -917498, 3, 2, -917497, 2, 0, -917496, 2, 0, -917495, 2, 0, -917494, 2, 0, -917493, 3, 0, -917492, 3, 2, -917491, 2, 0, -917490, 2, 0, -917489, 2, 0, -917488, 2, 0, -917487, 2, 0, -851968, 2, 0, -851967, 2, 0, -851966, 2, 0, -851965, 2, 0, -851964, 2, 0, -851963, 3, 65536, -851962, 3, 65538, -851961, 2, 0, -851960, 2, 0, -851959, 2, 0, -851958, 2, 0, -851957, 3, 65536, -851956, 3, 65538, -851955, 2, 0, -851954, 2, 0, -851953, 2, 0, -851952, 2, 0, -851951, 2, 0, -786432, 2, 0, -786431, 2, 0, -786430, 2, 0, -786429, 2, 0, -786428, 2, 0, -786427, 3, 65536, -786426, 3, 65538, -786425, 2, 0, -786424, 2, 0, -786423, 2, 0, -786422, 2, 0, -786421, 3, 65536, -786420, 3, 65538, -786419, 2, 0, -786418, 2, 0, -786417, 2, 0, -786416, 2, 0, -786415, 2, 0, -655361, 3, 0, -720896, 3, 1, -720895, 3, 1, -720894, 3, 1, -720893, 3, 1, -720892, 3, 1, -720891, 3, 65540, -720890, 3, 65538, -720889, 2, 0, -720888, 2, 0, -720887, 2, 0, -720886, 2, 0, -720885, 3, 65536, -720884, 3, 65539, -720883, 3, 1, -720882, 3, 1, -720881, 3, 1, -720880, 3, 1, -720879, 3, 1, -720878, 3, 2, -720864, 3, 0, -720863, 3, 1, -720862, 3, 1, -720861, 3, 1, -720860, 3, 1, -720859, 3, 1, -720858, 3, 1, -720857, 3, 1, -720856, 3, 1, -720855, 3, 1, -720854, 3, 2, -720853, 2, 0, -720852, 2, 0, -720851, 2, 0, -720850, 2, 0, -589825, 3, 131072, -655360, 3, 131073, -655359, 3, 131073, -655358, 3, 131073, -655357, 3, 131073, -655356, 3, 131073, -655355, 3, 4, -655354, 3, 65538, -655353, 2, 0, -655352, 2, 0, -655351, 2, 0, -655350, 2, 0, -655349, 3, 65536, -655348, 3, 3, -655347, 3, 131073, -655346, 3, 131073, -655345, 3, 131073, -655344, 3, 131073, -655343, 3, 131073, -655342, 3, 131074, -655328, 3, 131072, -655327, 3, 131073, -655326, 3, 131073, -655325, 3, 131073, -655324, 3, 131073, -655323, 3, 131073, -655322, 3, 131073, -655321, 3, 131073, -655320, 3, 131073, -655319, 3, 4, -655318, 3, 65538, -655317, 2, 0, -655316, 2, 0, -655315, 2, 0, -655314, 2, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 3, 65536, -589818, 3, 65538, -589817, 2, 0, -589816, 2, 0, -589815, 2, 0, -589814, 2, 0, -589813, 3, 65536, -589812, 3, 65538, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 0, 0, -589807, 0, 0, -589806, 0, 0, -589792, 0, 0, -589791, 0, 0, -589790, 0, 0, -589789, 0, 0, -589788, 0, 0, -589787, 0, 0, -589786, 0, 0, -589785, 0, 0, -589784, 0, 0, -589783, 3, 65536, -589782, 3, 65538, -589781, 2, 0, -589780, 2, 0, -589779, 2, 0, -589778, 2, 0, -524283, 3, 131072, -524282, 3, 131074, -524281, 2, 0, -524280, 2, 0, -524279, 2, 0, -524278, 2, 0, -524277, 3, 131072, -524276, 3, 131074, -524247, 3, 131072, -524246, 3, 131074, -524245, 2, 0, -524244, 2, 0, -524243, 2, 0, -524242, 2, 0, -524239, 2, 0, -524238, 2, 0, -524237, 2, 0, -524236, 2, 0, -524235, 2, 0, -524234, 2, 0, -458752, 2, 0, -458751, 2, 0, -458750, 2, 0, -458749, 2, 0, -458748, 2, 0, -458747, 0, 0, -458746, 0, 0, -458745, 2, 0, -458744, 2, 0, -458743, 2, 0, -458742, 2, 0, -458741, 0, 0, -458740, 0, 0, -458739, 2, 0, -458738, 2, 0, -458737, 2, 0, -458736, 2, 0, -458735, 2, 0, -458719, 2, 0, -458718, 2, 0, -458717, 2, 0, -458716, 2, 0, -458715, 2, 0, -458714, 2, 0, -458713, 2, 0, -458712, 2, 0, -458711, 0, 0, -458710, 0, 0, -458709, 2, 0, -458708, 2, 0, -458707, 2, 0, -458706, 2, 0, -458705, 0, 0, -458704, 0, 0, -458703, 2, 0, -458702, 2, 0, -458701, 2, 0, -458700, 2, 0, -458699, 2, 0, -458698, 2, 0, -393216, 2, 0, -393215, 2, 0, -393214, 2, 0, -393213, 2, 0, -393212, 2, 0, -393209, 2, 0, -393208, 2, 0, -393207, 2, 0, -393206, 2, 0, -393203, 2, 0, -393202, 2, 0, -393201, 2, 0, -393200, 2, 0, -393199, 2, 0, -393183, 2, 0, -393182, 2, 0, -393181, 2, 0, -393180, 2, 0, -393179, 2, 0, -393178, 2, 0, -393177, 2, 0, -393176, 2, 0, -393173, 2, 0, -393172, 2, 0, -393171, 2, 0, -393170, 2, 0, -393167, 2, 0, -393166, 2, 0, -393165, 2, 0, -393164, 2, 0, -393163, 2, 0, -393162, 2, 0, -327680, 2, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 2, 0, -327675, 2, 0, -327674, 2, 0, -327673, 2, 0, -327672, 2, 0, -327671, 2, 0, -327670, 2, 0, -327669, 2, 0, -327668, 2, 0, -327667, 2, 0, -327666, 2, 0, -327665, 2, 0, -327664, 2, 0, -327663, 2, 0, -327647, 2, 0, -327646, 2, 0, -327645, 2, 0, -327644, 2, 0, -327643, 2, 0, -327642, 2, 0, -327641, 2, 0, -327640, 2, 0, -327639, 2, 0, -327638, 2, 0, -327637, 2, 0, -327636, 2, 0, -327635, 2, 0, -327634, 2, 0, -327633, 2, 0, -327632, 2, 0, -327631, 2, 0, -327630, 2, 0, -327629, 2, 0, -327628, 2, 0, -327627, 2, 0, -327626, 2, 0, -262144, 2, 0, -262143, 2, 0, -262142, 2, 0, -262141, 2, 0, -262140, 2, 0, -262139, 3, 0, -262138, 3, 2, -262137, 2, 0, -262136, 2, 0, -262135, 2, 0, -262134, 2, 0, -262133, 3, 0, -262132, 3, 2, -262131, 2, 0, -262130, 2, 0, -262129, 2, 0, -262128, 2, 0, -262127, 2, 0, -262111, 2, 0, -262110, 2, 0, -262109, 2, 0, -262108, 2, 0, -262107, 2, 0, -262106, 2, 0, -262105, 2, 0, -262104, 2, 0, -262103, 3, 0, -262102, 3, 2, -262101, 2, 0, -262100, 2, 0, -262099, 2, 0, -262098, 2, 0, -262097, 3, 0, -262096, 3, 2, -262095, 2, 0, -262094, 2, 0, -262093, 2, 0, -262092, 2, 0, -262091, 2, 0, -262090, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 2, 0, -196603, 3, 65536, -196602, 3, 65538, -196601, 2, 0, -196600, 2, 0, -196599, 2, 0, -196598, 2, 0, -196597, 3, 65536, -196596, 3, 65538, -196595, 2, 0, -196594, 2, 0, -196593, 2, 0, -196592, 2, 0, -196591, 2, 0, -196575, 2, 0, -196574, 2, 0, -196573, 2, 0, -196572, 2, 0, -196571, 2, 0, -196570, 2, 0, -196569, 2, 0, -196568, 2, 0, -196567, 3, 65536, -196566, 3, 65538, -196565, 2, 0, -196564, 2, 0, -196563, 2, 0, -196562, 2, 0, -196561, 3, 65536, -196560, 3, 65538, -196559, 2, 0, -196558, 2, 0, -196557, 2, 0, -196556, 2, 0, -196555, 2, 0, -196554, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -131068, 2, 0, -131067, 3, 65536, -131066, 3, 65538, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -131062, 2, 0, -131061, 3, 65536, -131060, 3, 65538, -131059, 2, 0, -131058, 2, 0, -131057, 2, 0, -131056, 2, 0, -131055, 2, 0, -131039, 2, 0, -131038, 2, 0, -131037, 2, 0, -131036, 2, 0, -131035, 2, 0, -131034, 2, 0, -131033, 2, 0, -131032, 2, 0, -131031, 3, 65536, -131030, 3, 65538, -131029, 2, 0, -131028, 2, 0, -131027, 2, 0, -131026, 2, 0, -131025, 3, 65536, -131024, 3, 65538, -131023, 2, 0, -131022, 2, 0, -131021, 2, 0, -131020, 2, 0, -131019, 2, 0, -131018, 2, 0, -1, 3, 0, -65536, 3, 1, -65535, 3, 1, -65534, 3, 1, -65533, 3, 1, -65532, 3, 1, -65531, 3, 65540, -65530, 3, 65538, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 3, 65536, -65524, 3, 65539, -65523, 3, 1, -65522, 3, 1, -65521, 3, 1, -65520, 3, 1, -65519, 3, 1, -65518, 3, 1, -65517, 3, 1, -65516, 3, 1, -65515, 3, 1, -65514, 3, 1, -65513, 3, 1, -65512, 3, 1, -65511, 3, 1, -65510, 3, 1, -65509, 3, 1, -65508, 3, 1, -65507, 3, 1, -65506, 3, 1, -65505, 3, 1, -65504, 3, 1, -65503, 3, 1, -65502, 3, 1, -65501, 3, 1, -65500, 3, 1, -65499, 3, 1, -65498, 3, 1, -65497, 3, 1, -65496, 3, 1, -65495, 3, 65540, -65494, 3, 65538, -65493, 2, 0, -65492, 2, 0, -65491, 2, 0, -65490, 2, 0, -65489, 3, 65536, -65488, 3, 65538, 65535, 3, 131072, 0, 3, 131073, 1, 3, 131073, 2, 3, 131073, 3, 3, 131073, 4, 3, 131073, 5, 3, 131073, 6, 3, 131074, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 3, 131072, 12, 3, 131073, 13, 3, 131073, 14, 3, 131073, 15, 3, 131073, 16, 3, 131073, 17, 3, 131073, 18, 3, 131073, 19, 3, 131073, 20, 3, 131073, 21, 3, 131073, 22, 3, 131073, 23, 3, 131073, 24, 3, 131073, 25, 3, 131073, 26, 3, 131073, 27, 3, 131073, 28, 3, 131073, 29, 3, 131073, 30, 3, 131073, 31, 3, 131073, 32, 3, 131073, 33, 3, 131073, 34, 3, 131073, 35, 3, 131073, 36, 3, 131073, 37, 3, 131073, 38, 3, 131073, 39, 3, 131073, 40, 3, 131073, 41, 3, 131073, 42, 3, 131074, 43, 2, 0, 44, 2, 0, 45, 2, 0, 46, 2, 0, 47, 3, 65536, 48, 3, 65538, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 65578, 0, 0, 65579, 2, 0, 65580, 2, 0, 65581, 2, 0, 65582, 2, 0, 65583, 3, 65536, 65584, 3, 65538, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131115, 2, 0, 131116, 2, 0, 131117, 2, 0, 131118, 2, 0, 131119, 3, 65536, 131120, 3, 65538, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 2, 0, 196629, 2, 0, 196630, 2, 0, 196631, 2, 0, 196632, 2, 0, 196633, 2, 0, 196634, 2, 0, 196635, 2, 0, 196636, 2, 0, 196637, 2, 0, 196638, 2, 0, 196639, 2, 0, 196640, 2, 0, 196641, 2, 0, 196642, 2, 0, 196643, 2, 0, 196644, 2, 0, 196645, 2, 0, 196646, 2, 0, 196647, 2, 0, 196648, 2, 0, 196649, 2, 0, 196650, 2, 0, 196651, 2, 0, 196652, 2, 0, 196653, 2, 0, 196654, 2, 0, 196655, 3, 65536, 196656, 3, 65538, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 262164, 2, 0, 262165, 2, 0, 262166, 2, 0, 262167, 2, 0, 262168, 2, 0, 262169, 2, 0, 262170, 2, 0, 262171, 2, 0, 262172, 2, 0, 262173, 2, 0, 262174, 2, 0, 262175, 2, 0, 262176, 2, 0, 262177, 2, 0, 262178, 2, 0, 262179, 2, 0, 262180, 2, 0, 262181, 2, 0, 262182, 2, 0, 262183, 2, 0, 262184, 2, 0, 262185, 2, 0, 262186, 2, 0, 262187, 2, 0, 262188, 2, 0, 262189, 2, 0, 262190, 2, 0, 262191, 3, 65536, 262192, 3, 65538, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327706, 2, 0, 327707, 2, 0, 327708, 2, 0, 327709, 2, 0, 327710, 2, 0, 327711, 2, 0, 327712, 2, 0, 327713, 2, 0, 327714, 2, 0, 327715, 2, 0, 327716, 2, 0, 327717, 2, 0, 327718, 2, 0, 327719, 2, 0, 327720, 2, 0, 327721, 2, 0, 327722, 2, 0, 327723, 2, 0, 327724, 2, 0, 327725, 2, 0, 327726, 2, 0, 327727, 3, 65536, 327728, 3, 65538, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 393240, 2, 0, 393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 0, 393246, 2, 0, 393247, 2, 0, 393248, 2, 0, 393249, 2, 0, 393250, 2, 0, 393251, 2, 0, 393252, 2, 0, 393253, 2, 0, 393254, 2, 0, 393255, 2, 0, 393256, 2, 0, 393257, 2, 0, 393258, 2, 0, 393259, 2, 0, 393260, 2, 0, 393261, 2, 0, 393262, 2, 0, 393263, 3, 65536, 393264, 3, 65538, 524287, 3, 0, 458752, 3, 1, 458753, 3, 1, 458754, 3, 1, 458755, 3, 1, 458756, 3, 1, 458757, 3, 1, 458758, 3, 1, 458759, 3, 2, 458762, 3, 0, 458763, 3, 1, 458764, 3, 1, 458765, 3, 1, 458766, 3, 1, 458767, 3, 1, 458768, 3, 1, 458769, 3, 1, 458770, 3, 1, 458771, 3, 1, 458772, 3, 1, 458773, 3, 1, 458774, 3, 1, 458775, 3, 1, 458776, 3, 1, 458777, 3, 1, 458778, 3, 1, 458779, 3, 1, 458780, 3, 1, 458781, 3, 1, 458782, 3, 1, 458783, 3, 1, 458784, 3, 1, 458785, 3, 1, 458786, 3, 1, 458787, 3, 1, 458788, 3, 1, 458789, 3, 1, 458790, 3, 1, 458791, 3, 1, 458792, 3, 1, 458793, 3, 1, 458794, 3, 1, 458795, 3, 1, 458796, 3, 1, 458797, 3, 1, 458798, 3, 1, 458799, 3, 65540, 458800, 3, 65538, 589822, 4, 0, 589823, 3, 131072, 524288, 3, 131073, 524289, 3, 131073, 524290, 3, 131073, 524291, 3, 131073, 524292, 3, 131073, 524293, 3, 131073, 524294, 3, 4, 524295, 3, 65539, 524296, 3, 1, 524297, 3, 1, 524298, 3, 65540, 524299, 3, 3, 524300, 3, 131073, 524301, 3, 131073, 524302, 3, 131073, 524303, 3, 131073, 524304, 3, 131073, 524305, 3, 131073, 524306, 3, 131073, 524307, 3, 131073, 524308, 3, 131073, 524309, 3, 131073, 524310, 3, 131073, 524311, 3, 131073, 524312, 3, 131073, 524313, 3, 131073, 524314, 3, 131073, 524315, 3, 131073, 524316, 3, 131073, 524317, 3, 131073, 524318, 3, 131073, 524319, 3, 131073, 524320, 3, 131073, 524321, 3, 131073, 524322, 3, 131073, 524323, 3, 131073, 524324, 3, 131073, 524325, 3, 131073, 524326, 3, 131073, 524327, 3, 131073, 524328, 3, 131073, 524329, 3, 131073, 524330, 3, 131073, 524331, 3, 131073, 524332, 3, 131073, 524333, 3, 131073, 524334, 3, 131073, 524335, 3, 131073, 524336, 3, 131074, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 3, 131072, 589831, 3, 131073, 589832, 3, 131073, 589833, 3, 131073, 589834, 3, 131073, 589835, 3, 131074, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 131073, 655374, 1, 131073, 655375, 1, 131073, 655376, 1, 131073, 655377, 1, 131073, 655378, 1, 131074, 720902, 4, 0, 851972, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 568, 328 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( -64, 0 )
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( -983038, 0, 0, -983025, 0, 0, -917502, 1, 0, -917489, 1, 0, -851966, 0, 0, -851953, 0, 0, -786430, 1, 0, -786417, 1, 0, -655353, 14, 0, -655350, 14, 0, -589781, 14, 0, -589778, 14, 0, -327678, 0, 0, -327665, 0, 0, -327646, 0, 0, -327644, 0, 0, -327642, 0, 0, -262142, 1, 0, -262129, 1, 0, -196606, 0, 0, -196593, 0, 0, -196574, 0, 0, -196572, 0, 0, -196570, 0, 0, -131070, 1, 0, -131057, 1, 0, 7, 7, 0, 65551, 4, 0, 65571, 10, 0, 131084, 6, 0, 131085, 11, 0, 131086, 11, 0, 131087, 5, 0, 131088, 11, 0, 131089, 5, 0, 131090, 3, 0, 131093, 5, 0, 131094, 5, 0, 131095, 11, 0, 131096, 5, 0, 131097, 13, 0, 131100, 5, 0, 131101, 12, 0, 131102, 5, 0, 131103, 5, 0, 131104, 13, 0, 131105, 3, 0, 131108, 13, 0, 131109, 5, 0, 131110, 5, 0, 131111, 12, 0, 262166, 7, 0, 262180, 7, 0, 327693, 7, 0, 327707, 14, 0, 393245, 7, 0, 393257, 7, 0 )

[node name="101" type="Sprite" parent="TileMap2"]
position = Vector2( 480, -416 )
texture = ExtResource( 2 )

[node name="102" type="Sprite" parent="TileMap2"]
position = Vector2( 672, -416 )
texture = ExtResource( 3 )

[node name="103" type="Sprite" parent="TileMap2"]
position = Vector2( 480, -1056 )
texture = ExtResource( 7 )

[node name="104" type="Sprite" parent="TileMap2"]
position = Vector2( 672, -1056 )
texture = ExtResource( 1 )

[node name="ClassroomTeleporter" type="Area2D" parent="." groups=[
"EventTrigger",
]]
position = Vector2( 2560, -320 )
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClassroomTeleporter"]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="SchoolTeleporter" type="Area2D" parent="."]
position = Vector2( 448, 448 )
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="SchoolTeleporter"]
position = Vector2( 64, 32 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="SchoolOOBL1" type="Area2D" parent="." groups=[
"OutOfBoundsLeft",
]]
position = Vector2( 128, 192 )
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="SchoolOOBL1"]
position = Vector2( 32, 128 )
shape = SubResource( 3 )

[node name="SchoolOOBL2" type="Area2D" parent="." groups=[
"OutOfBoundsLeft",
]]
position = Vector2( 256, -320 )
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="SchoolOOBL2"]
position = Vector2( 32, 32 )
shape = SubResource( 4 )

[node name="SchoolOOBL3" type="Area2D" parent="." groups=[
"OutOfBoundsLeft",
]]
position = Vector2( 256, -960 )
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="SchoolOOBL3"]
position = Vector2( 32, 32 )
shape = SubResource( 4 )

[node name="SchoolOOBR" parent="." instance=ExtResource( 10 )]
position = Vector2( 3008, -320 )

[node name="SchoolOOBR2" parent="." instance=ExtResource( 10 )]
position = Vector2( 704, -320 )

[node name="SchoolOOBR3" parent="." instance=ExtResource( 10 )]
position = Vector2( 704, -960 )

[node name="DialogueHUD" parent="." instance=ExtResource( 11 )]
[connection signal="teleport" from="Player" to="." method="_on_Player_teleport"]
[connection signal="touchTrigger" from="Player" to="." method="_on_Player_touchTrigger"]
